refactor: simplify lr simplifier